- color palette "HCL" added, which picks colors from the HCL color space. Applicable for "index", "depth" and "categorical". Additional arguments added to control picking method.
- vp argument added, to place treemap inside a grid.viewport. Useful for custom made visualizations or small multiples.
- small multiples not directly facilitated anymore, since it can easily be done with the vp argument.
- invisible treemap output redefined
- aggregation method (under the engine) re-implemented
- businness statistics example dataset replaced. The new dataset contains four hierarchical levels.

version 1.1-2
- no dependencies anymore, only imports

version 1.1-1
- improved value treemap (better color range)
- added new example dataset: GNI2010
- fixed bug with character variables as index variables
- fixed bug with non-factor variables as categorical variable

version 1.1
- added categorical treemap type (each category has own color)
- added position.legend argument, which determines whether legend is placed: "bottom", "right", or "none"

version 1.0-4
- two bugs fixed (category labels were not shown, and sorting order was sometimes neglected)
- aspect ratio control added (argument aspRatio)

version 1.0-3
- faster aggregation (using data.table instead of plyr)
- treemap types rearranged: also added type "index"
- second layout algorithm implemented: squarified treemaps
- more possibilities added to tweak font sizes
- argument na.rm added in case there are missing values during aggregation

version 0.11-1
- updated examples of tmPlot

version 0.11
- added treemap type "value", which means that values of the color variable are directly mapped to the color palette. This type is mostly used for the Map of the Market kind of treemaps, with negative values colored red, zeros yellow, and positive values green.
- added the possibility to use own palettes
- added parameters to tweak the font sizes
- cleaned up the code
